# school-mgmt

./: .cspell.json  .gitignore  AIGUIDE.md  LICENSE  PRIVACY.md  README.md  admin_redesign_specification.md  bootstrap.ps1  camera_test.py  check_cameras.py  comprehensive_scheduling_test_report.md  comprehensive_test_final.py  database.py  face_detection_test.py  face_service.py  main.py  models.py  new_admin_view_design_spec.md  package.json  pyproject.toml  requirements.txt  requirements_web.txt  school_system.py  test_class_attendance_system.py  test_comprehensive_scheduling.py  test_day_ranges.py  test_face_enrollment.py  test_recognition.py  utils.py  views.py
.github/workflows/: build.yml
backup/: school_system.py.bak
docs/: index.html  privacy.html
js_models/: face_js_bundle.js
src/: database.py  face_service.py  face_service_js.py  main.py  models.py  navigation.py  utils.py
src/sections/: admin_batches_section.py  admin_classes_section.py  admin_face_encodings_section.py  admin_fees_section.py  admin_global_search.py  admin_stats_section.py  admin_ui_components.py  admin_users_section.py  admin_utils.py
src/views/: __init__.py  admin_view.py  attendance_view.py  face_enrollment_view.py  face_enrollment_view_fixed.py  fees_view.py  live_attendance_view.py  student_view.py
views/: attendance_view.py  face_enrollment_view.py  fees_view.py  live_attendance_view.py  student_view.py
